- Java 8 compatibility - This is a divergent branch that will never be merged, as Java 8 compatibility will not be maintained.