@@ -20,8 +20,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static com.github.alexdlaird.util.StringUtils.isNotBlank;
 import static java.net.HttpURLConnection.HTTP_BAD_GATEWAY;
@@ -205,19 +207,6 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
-    public void testKill() {
-        // GIVEN
-        final CreateTunnel createTunnel = new CreateTunnel.Builder().withName("my-tunnel").build();
-        ngrokClient.connect(createTunnel);
-
-        // WHEN
-        ngrokClient.kill();
-
-        // THEN
-        assertFalse(ngrokClient.getNgrokProcess().isRunning());
-    }
-
-    @Test
     public void testGetVersion() {
         // WHEN
         final Version version = ngrokClient.getVersion();
@@ -392,10 +381,20 @@ class NgrokClientTest extends NgrokTestCase {
 
         // GIVEN
         final String subdomain = createUniqueSubdomain();
-        final Map<String, Object> httpTunnelConfig = Map.of("proto", "http", "addr", "8000", "subdomain", subdomain);
-        final Map<String, Object> tcpTunnelConfig = Map.of("proto", "tcp", "addr", "22");
-        final Map<String, Object> tunnelsConfig = Map.of("http-tunnel", httpTunnelConfig, "tcp-tunnel", tcpTunnelConfig);
-        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
+        final Map<String, Object> httpTunnelConfig = new HashMap<String, Object>() {{
+            put("proto", "http");
+            put("addr", "8000");
+            put("subdomain", subdomain);
+        }};
+        final Map<String, Object> tcpTunnelConfig = new HashMap<String, Object>() {{
+            put("proto", "tcp");
+            put("addr", "22");
+        }};
+        final Map<String, Object> tunnelsConfig = new HashMap<String, Object>() {{
+            put("http-tunnel", httpTunnelConfig);
+            put("tcp-tunnel", tcpTunnelConfig);
+        }};
+        final Map<String, Object> config = Collections.singletonMap("tunnels", tunnelsConfig);
 
         final Path configPath2 = Paths.get(javaNgrokConfig.getConfigPath().getParent().toString(), "config2.yml");
         ngrokInstaller.installDefaultConfig(configPath2, config);
@@ -437,9 +436,13 @@ class NgrokClientTest extends NgrokTestCase {
 
         // GIVEN
         final String subdomain1 = createUniqueSubdomain();
-        final Map<String, Object> defaultTunnelConfig = Map.of("proto", "http", "addr", "8080", "subdomain", subdomain1);
-        final Map<String, Object> tunnelsConfig = Map.of("java-ngrok-default", defaultTunnelConfig);
-        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
+        final Map<String, Object> defaultTunnelConfig = new HashMap<String, Object>() {{
+            put("proto", "http");
+            put("addr", "8080");
+            put("subdomain", subdomain1);
+        }};
+        final Map<String, Object> tunnelsConfig = Collections.singletonMap("java-ngrok-default", defaultTunnelConfig);
+        final Map<String, Object> config = Collections.singletonMap("tunnels", tunnelsConfig);
 
         final Path configPath2 = Paths.get(javaNgrokConfig.getConfigPath().getParent().toString(), "config2.yml");
         ngrokInstaller.installDefaultConfig(configPath2, config);
@@ -477,7 +480,7 @@ class NgrokClientTest extends NgrokTestCase {
     public void testSetAuthToken() throws IOException {
         // WHEN
         ngrokClient.setAuthToken("807ad30a-73be-48d8");
-        final String contents = Files.readString(javaNgrokConfig.getConfigPath());
+        final String contents = Files.lines(javaNgrokConfig.getConfigPath()).collect(Collectors.joining("\n"));
 
         // THEN
         assertTrue(contents.contains("807ad30a-73be-48d8"));
